Added game title styling and instructions

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>2048</h1>
+        <h1 class="game-title">
+          2048
+          <span class="status-version">beta</span>
+        </h1>
+        <p class="game-instructions">
+          Junte os números iguais para somá-los e chegar ao número 2048!
+        </p>
         <div class="controls">
             <select id="difficulty">
                 <option value="easy">Fácil</option>
