Refactor HTML and JS for clarity; add new game logic

--- a/index.html
+++ b/index.html
@@ -1,54 +1,56 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2048 Game</title>
-    <link rel="stylesheet" href="styles/style.css">
-</head>
-<body>
-    <div class="container">
-        <h1 class="game-title">
-          2048
-          <span class="status-version">beta</span>
-        </h1>
-        <p class="game-instructions">
-          Junte os números iguais para somá-los e chegar ao número 2048!
-        </p>
-        <div class="controls">
-            <select id="difficulty">
-                <option value="easy">Fácil</option>
-                <option value="medium">Médio</option>
-                <option value="hard">Difícil</option>
-            </select>
-            <button id="start-game">Iniciar Jogo</button>
-        </div>
-        <div class="score-container">Pontuação: <span id="score">0</span></div>
-        <div id="timer" class="timer">Tempo: <span id="time">00:00</span></div>
-        <div id="game-board"></div>
-        <div id="game-over-popover" class="poppover hidden">
-          <div class="popover-content">
-            <h2>Game Over!</h2>
-            <p>Tempo esgotado!</p>
-            <button id="try-again-button">Jogar Novamente</button>
-          </div>
-        </div>
-        <div id="congratulations-popover" class="popover hidden">
-          <div class="popover-content">
-            <h2>Parabéns!</h2>
-            <p>Você alcancou o número 2048!</p>
-            <button id="continue-button">Jogar Novamente</button>
-          </div>
-        </div>
-        <div id="no-moves-popover" class="popover hidden">
-          <div class="popover-content">
-            <h2>Game Over!</h2>
-            <p>Você não possui mais movimentos disponíveis!</p>
-            <button id="continue-button">Jogar Novamente</button>
-          </div>
-        </div>
-    </div>
-    <script src="js/game.js"></script>
-</body>
-</html>
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>2048 Game</title>
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+  <div class="container">
+    <h1 class="game-title">
+      2048
+      <span class="status-version">beta</span>
+    </h1>
+    <p class="game-instructions">
+      Junte os números iguais para somá-los e chegar ao número 2048!
+    </p>
+    <div class="controls">
+      <select id="difficulty">
+        <option value="easy">Fácil</option>
+        <option value="medium">Médio</option>
+        <option value="hard">Difícil</option>
+      </select>
+      <button id="start-game">Iniciar Jogo</button>
+    </div>
+    <div class="score-container">Pontuação: <span id="score">0</span></div>
+    <div id="timer" class="timer">Tempo: <span id="time">00:00</span></div>
+    <div id="game-board"></div>
+    <div id="game-over-popover" class="poppover hidden">
+      <div class="popover-content">
+        <h2>Game Over!</h2>
+        <p>Tempo esgotado!</p>
+        <button id="try-again-button">Jogar Novamente</button>
+      </div>
+    </div>
+    <div id="congratulations-popover" class="popover hidden">
+      <div class="popover-content">
+        <h2>Parabéns!</h2>
+        <p>Você alcancou o número 2048!</p>
+        <button id="continue-button">Jogar Novamente</button>
+      </div>
+    </div>
+    <div id="no-moves-popover" class="popover hidden">
+      <div class="popover-content">
+        <h2>Sem Movimentos</h2>
+        <p>Você não possui mais espaço para mover!</p>
+        <button id="try-again-no-moves-button">Tente Novamente</button>
+      </div>
+    </div>
+  </div>
+  <script src="js/game.js"></script>
+</body>
+
+</html>
