--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
     </div>
   </div>
-  <script src="js/game.js"></script>
+  <script type="module" src="js/game.js"></script>
 </body>
 
 </html>
